# pe-hackathon

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  FAILURE_MODES.md  LOAD_TEST_RESULTS.md  README.md  RUNBOOK.md  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  cache.py  database.py
app/models/: event.py  url.py  user.py
app/routes/: __init__.py  events.py  health.py  metrics.py  urls.py  users.py
data/: events.csv  urls.csv  users.csv
k6/: load_test.js  quick_test.js
monitoring/: prometheus.yml
scripts/: load_csv.py  setup_db.py
tests/: conftest.py  test_health.py  test_urls.py
